tests/cases/errors/compile_invalid_assignment_target.lox
// You cannot assign to a non-variable target.
// expect compile error: Invalid assignment target.
1 + 2 = 3;
